--- a/src/main/resources/templates/channel.html
+++ b/src/main/resources/templates/channel.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
- <script src="chat.js"></script>
+<script src="chat.js"></script>
 <head>
-  <title>Chat App</title>
+<link rel="stylesheet" type="text/css" href="channel.css">
+<title>Chat App</title>
 </head>
 <body>
-  <h1>Chat App</h1>
-  <div id="chat-container">
-    <div id="message-container"></div>
-    <form id="send-container">
-      <input type="text" id="message-input" placeholder="Type a message...">
-      <button type="submit">Send</button>
-    </form>
-  </div>
- 
+	<div id="container">
+		<h1>Chat</h1>
+		<div id="message-box"></div>
+		<form id="input-box">
+			<input type="text" id="message-input"
+				placeholder="Type your message here" /> <input type="submit"
+				value="Send" />
+		</form>
+	</div>
+
 </body>
 </html>
