--- a/src/main/resources/templates/channel.html
+++ b/src/main/resources/templates/channel.html
@@ -1,20 +1,107 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
-<script src="chat.js"></script>
+
 <head>
-<link rel="stylesheet" type="text/css" href="channel.css">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <title>Chat App</title>
+<style>
+body {
+	margin: 0;
+	padding: 0;
+	font-family: Arial, sans-serif;
+}
+
+#container {
+	max-width: 600px;
+	margin: 0 auto;
+	padding: 20px;
+}
+
+#message-box {
+	border: 1px solid #ccc;
+	height: 400px;
+	overflow-y: scroll;
+	padding: 10px;
+}
+
+#message-box p {
+	margin: 0;
+	padding: 5px;
+	background-color: #f1f1f1;
+	border-radius: 5px;
+	text-align: left;
+}
+
+#input-box {
+	margin-top: 20px;
+	display: flex;
+}
+
+#input-box input[type="text"] {
+	flex: 1;
+	padding: 10px;
+	font-size: 16px;
+	border: none;
+	border-radius: 5px 0 0 5px;
+}
+
+#input-box input[type="submit"] {
+	padding: 10px;
+	font-size: 16px;
+	border: none;
+	border-radius: 0 5px 5px 0;
+	background-color: #4CAF50;
+	color: #fff;
+	cursor: pointer;
+}
+</style>
 </head>
 <body>
-	<div id="container">
-		<h1>Chat</h1>
-		<div id="message-box"></div>
-		<form id="input-box">
-			<input type="text" id="message-input"
-				placeholder="Type your message here" /> <input type="submit"
-				value="Send" />
-		</form>
-	</div>
+	<form>
+		<div id="messageArea">
+			<div th:each="message : ${channel.messages}">
+				<p th:text="${message.user.name + ': ' + message.message}"></p>
+			</div>
+		</div>
+		<input type="hidden" id="channelId" th:value="${channelId}" /> <input
+			type="text" id="messageInput">
+		<button onclick="sendMessage()">Send</button>
+	</form>
 
+	<script>
+   
+</script>
+	<script>
+	setInterval(function() {
+	    $('#messageArea').load(location.href + ' #messageArea');
+	  }, 500);
+	function sendMessage() {
+		var channelId = document.getElementById('channelId').value;
+		var messageBox = document.getElementById('messageInput');
+		var message = {
+			"channelId": channelId,
+			"message": messageBox.value,
+			"user": sessionStorage.getItem('username')
+		};
+		messageBox.value = '';
+		fetch(`/channel/${channelId}?message=${message.message}&user=${message.user}`, {
+			method: "POST",
+			headers: {
+				"Content-Type": "application/json"
+			},
+			body: JSON.stringify(message)
+		})
+		.then(response => response.json())
+		.then(data => {
+			console.log(data);
+		})
+		.catch(error => {
+			console.error(error);
+		});
+	}
+	  setInterval(function() {
+		    $('#messageArea').load(window.location.href + ' #messageArea');
+		  }, 500);
+	</script>
 </body>
 </html>
