--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -26,6 +26,6 @@
 		</div>
 	</form>
 	
-	<script type="text/javascript" src="/welcome.js"></script>
+	<script type="text/javascript" src="welcome.js"></script>
 </body>
 </html>
